--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@radix-ui/react-toast": "^1.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
+    "motion": "^12.4.10",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
